--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -99,7 +99,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="echo 'Hola, mundo!'" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -109,7 +109,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="ls -l" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -119,7 +119,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="ls -la" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -129,7 +129,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="echo 'Hola Mundo!' > archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -139,7 +139,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="touch archivo.php" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -149,7 +149,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="sudo apt-get install 'nombre de la herramienta'" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -159,7 +159,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="pip3 install 'nombre de la librería'" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -169,7 +169,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cat archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -179,7 +179,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cat archivo | xclip -sel clip" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -189,7 +189,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cd Documentos" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -199,7 +199,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cd .." oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -209,7 +209,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="mkdir carpeta" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
  
@@ -219,7 +219,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="mkdir -p /x/y/z/carpeta" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -229,7 +229,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cp /home/usuario/descargas/archivo.txt ." oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -239,7 +239,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cp -r carpeta/ Documentos/nombre_de_copia" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -249,7 +249,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="mv /home/usuario/descargas/archivo.txt ." oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -259,7 +259,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="mv viejo.py nuevo.py" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -269,7 +269,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="mv imagen.jpg ../imagen.jpg" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -279,7 +279,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="rm archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -289,7 +289,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="rm -rf Documentos/carpeta" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -299,7 +299,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="rm *" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -309,7 +309,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="sudo apt-get --purge remove 'nombre del programa'" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -319,7 +319,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="sudo su" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -329,7 +329,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="locate 'nombre clave'" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -339,7 +339,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="find . -type f " oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -349,7 +349,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="find . -name archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -359,7 +359,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="find / -name archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -369,7 +369,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="less archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -379,7 +379,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="diff main/commands.go dev/commands.go" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -389,7 +389,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="tree" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -399,7 +399,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="zip -q archivos.zip archivo1 archivo2 archivo3" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -409,7 +409,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="zip -r carpeta.zip carpeta" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -419,7 +419,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="unzip archivo.zip" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
@@ -429,7 +429,7 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="nano archivo.txt" oninput="ajustarAncho(this)">
-                    <button><i class="fa fa-clone"> copy</i></button>
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
 
