--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -39,42 +39,42 @@
                 <h1>Guía a los Directorios del Sistema en Linux y sus Funciones</h1>
                 <p>Linux es un sistema operativo de código abierto que utiliza una estructura de directorios jerárquica para organizar los archivos y recursos del sistema. Cada directorio tiene una función específica que contribuye al funcionamiento eficiente del sistema. En este artículo, exploraremos los directorios más importantes del sistema Linux y analizaremos sus respectivas funciones.</p>
                 <br>
-                <ul style="list-style-type: circle;">
-                    <li>/bin - Ejecutables del Sistema</li>
+                <ul>
+                    <li><marcador class="resaltado1">/bin</marcador> - Ejecutables del Sistema</li>
                     <p>El directorio '/bin' contiene archivos ejecutables esenciales para el arranque y funcionamiento básico del sistema. Estos ejecutables son accesibles para todos los usuarios y son esenciales incluso si el sistema se inicia en un modo de recuperación.</p>
-                    <li>/boot - Archivos de Arranque</li>
+                    <li><marcador class="resaltado1">/boot</marcador> - Archivos de Arranque</li>
                     <p>El directorio '/boot' almacena los archivos relacionados con el proceso de arranque del sistema. Esto incluye los archivos del gestor de arranque (como GRUB) y las imágenes del kernel que se utilizan durante el inicio.</p>
-                    <li>/dev - Dispositivos</li>
+                    <li><marcador class="resaltado1">/dev</marcador> - Dispositivos</li>
                     <p>El directorio '/dev' contiene archivos especiales que representan dispositivos hardware y pseudo-dispositivos del sistema. Estos archivos permiten a los programas interactuar con el hardware como si fueran archivos regulares.</p>
-                    <li>/etc - Archivos de Configuración</li>
+                    <li><marcador class="resaltado1">/etc</marcador> - Archivos de Configuración</li>
                     <p>El directorio '/etc' alberga archivos de configuración del sistema y de aplicaciones. Aquí es donde los administradores pueden ajustar el comportamiento de los programas y configurar opciones del sistema.</p>
-                    <li>/home - Directorios de Usuarios</li>
+                    <li><marcador class="resaltado1">/home</marcador> - Directorios de Usuarios</li>
                     <p>Cada usuario del sistema tiene su propio directorio personal en '/home', donde pueden almacenar sus archivos y configuraciones individuales. Los nombres de los directorios coinciden con los nombres de usuario.</p>
-                    <li>/lib y /lib64 - Bibliotecas Compartidas</li>
+                    <li><marcador class="resaltado1">/lib</marcador> y <marcador class="resaltado1">/lib64</marcador> - Bibliotecas Compartidas</li>
                     <p>Los directorios '/lib' y '/lib64' contienen bibliotecas compartidas esenciales utilizadas por los ejecutables del sistema y las aplicaciones. Estas bibliotecas proporcionan funciones y rutinas necesarias para la ejecución de programas.</p>
-                    <li>/media - Puntos de Montaje para Dispositivos Extraíbles</li>
+                    <li><marcador class="resaltado1">/media</marcador> - Puntos de Montaje para Dispositivos Extraíbles</li>
                     <p>El directorio '/media' se utiliza para montar dispositivos extraíbles, como unidades USB y CD/DVD, cuando se conectan al sistema.</p>
-                    <li>/mnt - Puntos de Montaje Temporales</li>
+                    <li><marcador class="resaltado1">/mnt</marcador> - Puntos de Montaje Temporales</li>
                     <p>El directorio '/mnt' se utiliza para montar temporalmente sistemas de archivos adicionales. A menudo, se utiliza para montar sistemas de archivos externos o temporales.</p>
-                    <li>/opt - Software Adicional</li>
+                    <li><marcador class="resaltado1">/opt</marcador> - Software Adicional</li>
                     <p>El directorio '/opt' se utiliza para instalar software adicional que no es parte del sistema operativo base. Esto puede incluir aplicaciones comerciales o software personalizado.</p>
-                    <li>/proc - Información del Proceso</li>
+                    <li><marcador class="resaltado1">/proc</marcador> - Información del Proceso</li>
                     <p>El directorio '/proc' proporciona información sobre los procesos en ejecución y el estado del sistema en forma de archivos virtuales.</p>
-                    <li>/root - Directorio del Usuario Root</li>
+                    <li><marcador class="resaltado1">/root</marcador> - Directorio del Usuario Root</li>
                     <p>El directorio '/root' es el directorio personal del usuario root, el administrador del sistema. Se diferencia del directorio /home/root.</p>
-                    <li>/run - Archivos Temporales de Ejecución</li>
+                    <li><marcador class="resaltado1">/run</marcador> - Archivos Temporales de Ejecución</li>
                     <p>El directorio '/run' almacena archivos temporales utilizados por servicios y aplicaciones en ejecución. Especifica información sobre el estado actual del sistema.</p>
-                    <li>/sbin - Ejecutables del Sistema (Superusuario)</li>
+                    <li><marcador class="resaltado1">/sbin</marcador> - Ejecutables del Sistema (Superusuario)</li>
                     <p>El directorio '/sbin' almacena archivos ejecutables del sistema que solo pueden ser utilizados por el superusuario (root). Estos ejecutables suelen ser esenciales para la administración del sistema.</p>
-                    <li>/srv - Datos de Servicio</li>
+                    <li><marcador class="resaltado1">/srv</marcador> - Datos de Servicio</li>
                     <p>El directorio '/srv' almacena datos específicos de servicios proporcionados por el sistema.</p>
-                    <li>/sys - Archivos de Información del Kernel</li>
+                    <li><marcador class="resaltado1">/sys</marcador> - Archivos de Información del Kernel</li>
                     <p>El directorio '/sys' contiene archivos que representan parámetros y estadísticas del kernel y permiten a los usuarios y aplicaciones interactuar con el kernel.</p>
-                    <li>/tmp - Archivos Temporales</li>
+                    <li><marcador class="resaltado1">/tmp</marcador> - Archivos Temporales</li>
                     <p>El directorio '/tmp' se utiliza para almacenar archivos temporales que se eliminan al reiniciar el sistema. Los usuarios y aplicaciones pueden utilizarlo para operaciones temporales.</p>
-                    <li>/usr - Recursos Compartidos del Usuario</li>
+                    <li><marcador class="resaltado1">/usr</marcador> - Recursos Compartidos del Usuario</li>
                     <p>El directorio '/usr' alberga la mayoría de los recursos compartidos del sistema, como aplicaciones, bibliotecas y documentación. Puede ser montado en una partición separada para facilitar la administración.</p>
-                    <li>/var - Datos Variables</li>
+                    <li><marcador class="resaltado1">/var</marcador> - Datos Variables</li>
                     <p>El directorio '/var' almacena datos variables que cambian con el tiempo, como registros de sistema, correos electrónicos y archivos de caché.</p>
                 </ul>
                 <br>
@@ -87,8 +87,8 @@
                 <p>Existen muchos tutoriales en internet que te guían paso a paso para poder realizar la instalación por cualquiera de estos métodos, pero es importante saber cuál es el método que se ajuste más a tus necesidades. En caso de tener una PC con bajos recursos, te recomiendo que realices una partición de disco.</p>
                 <p>Aquí están los pasos a seguir para cada método de instalación en caso de que tengas experiencia y no requieras un tutorial paso a paso:</p>
                 <br>
-                <ul style="list-style-type: square;">
-                    <li>Instalación en Máquinas Virtuales</li>
+                <ul>
+                    <li><marcador class="resaltado2">Instalación en Máquinas Virtuales</marcador></li>
                     <p>Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro, lo que te brinda un entorno aislado y seguro para probar Linux sin afectar tu sistema principal. Aquí están los pasos generales para instalar Linux en una máquina virtual:</p>
                     <ol>
                         <li>Elige un Software de Virtualización: Utiliza herramientas populares como VirtualBox, VMware o Hyper-V para crear y gestionar máquinas virtuales.</li>
@@ -99,7 +99,7 @@
                         <li>Finaliza la Instalación: Reinicia la VM y disfruta de tu nueva instalación de Linux en una máquina virtual.</li>
                     </ol>
                     <br>
-                    <li>Instalación en Particiones de Disco</li>
+                    <li><marcador class="resaltado2">Instalación en Particiones de Disco</marcador></li>
                     <p>Instalar Linux en una partición de disco es una forma más permanente de usar el sistema. Aquí tienes los pasos básicos:</p>
                     <ol>
                         <li>Prepara una Partición: Redimensiona tu disco duro para crear espacio no asignado donde se instalará Linux.</li>
@@ -111,7 +111,7 @@
                         <li>Completa la Instalación: Sigue las instrucciones del instalador para finalizar la instalación.</li>
                     </ol>
                     <br>
-                    <li>Instalación en USB</li>
+                    <li><marcador class="resaltado2">Instalación en USB</marcador></li>
                     <p>La instalación en un USB booteable es una forma conveniente de instalar Linux en una computadora sin necesidad de particionar el disco duro. Sigue estos pasos:</p>
                     <ol>
                         <li>Descarga la imagen ISO de la distribución de Linux que deseas instalar desde el sitio web oficial.</li>
@@ -135,18 +135,18 @@
                 </div>
                 <h2>Diferencias y Ventajas</h2>
                 <p>Cada método de instalación de Linux tiene sus propias características y ventajas. A continuación, detallamos las diferencias entre usar máquinas virtuales, particiones de disco y un USB booteable, junto con las ventajas específicas de la partición y las precauciones al usar un USB booteable:</p>
-                <ul style="list-style-type: square;">
-                    <li>Máquinas Virtuales:</li>
+                <ul>
+                    <li><marcador class="resaltado2">Máquinas Virtuales:</marcador></li>
                     <ul>
                         <li>Diferencias: Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro. No afectan el sistema anfitrión y brindan un entorno aislado para probar Linux. La instalación se realiza en un archivo virtual, lo que facilita la eliminación o la duplicación.</li>
                         <li>Ventajas: No se modifican las particiones del sistema anfitrión, lo que garantiza la seguridad y evita conflictos con otros sistemas operativos. Puedes experimentar con múltiples distribuciones de Linux sin comprometer la estabilidad del sistema principal.</li>
                     </ul>
-                    <li>Particiones de Disco:</li>
+                    <li><marcador class="resaltado2">Particiones de Disco:</marcador></li>
                     <ul>
                         <li>Diferencias: La instalación en particiones de disco crea una instalación nativa en una partición del disco duro. Puede ser un proceso más involucrado, ya que requiere la reorganización del espacio en disco y la configuración de particiones.</li>
                         <li>Ventajas: Obtienes un rendimiento óptimo, ya que Linux se ejecuta directamente en el hardware. Tienes acceso completo a los recursos del sistema y no estás limitado por la capa de virtualización. Puedes configurar tu sistema para que Linux sea el sistema operativo principal.</li>
                     </ul>
-                    <li>USB:</li>
+                    <li><marcador class="resaltado2">USB:</marcador></li>
                     <ul>
                         <li>Diferencias: Instalar Linux desde un USB booteable implica arrancar tu computadora directamente desde el USB. No requiere particionar el disco duro.</li>
                         <li>Ventajas: Puedes probar Linux antes de comprometerte a una instalación permanente. Ideal para sistemas que no deseas modificar o que no te pertenecen. Es una forma de llevar tu sistema operativo y tus datos a cualquier lugar y ejecutarlo en diferentes computadoras y, al ejecutar tu sistema desde una unidad USB, evitas dejar rastros en la máquina anfitriona y tus datos quedan en la USB.También en una USB no afectará al sistema anfitrión, lo que es especialmente útil para probar diferentes distribuciones o entornos sin comprometer la instalación existente.</li>
